--- a/src/Styles/modules/intro.module.css
+++ b/src/Styles/modules/intro.module.css
@@ -492,9 +492,7 @@
   margin-bottom: 5px;
   display: inline-block; /* Or block */
 }
-.cardContainerL {
-  composes: cardContainer;
-}
+
 
 @media (max-width: 360px) {
   .mainImage {
